--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,11 @@ ul {
   font-size: 50px;
   font-weight: 550;
 }
+.about-section-main {
+  background-color: tomato;
+}
 .about-section {
-  background-color: rgba(255, 99, 71, 0.644);
-
-  margin-bottom: 20%;
+  margin-bottom: 30%;
 }
 .about-section-bg {
   filter: blur(3px);
@@ -109,12 +110,18 @@ ul {
   width: 100%;
   margin-bottom: 10px;
 }
-.about-section-text {
+.about-section h1 {
+  border-radius: 40px;
+  padding: 10px 25px;
+  background-color: #fff;
   top: 150px;
   position: relative;
-  color: white;
-  font-weight: 700;
-  font-size: 55px;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
+  font-size: 50px;
+}
+.about-section-main p {
+  font-size: 18px;
 }
 .img-center img {
   display: block;
